# janus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  prime_factors.expected.txt  prime_factors.janus
cmake/: clang-wrapper.sh  verify_release_version.cmake  write_channel_manifest.cmake  write_checksum.cmake
docs/: development-roadmap-2026.md  development.md  getting-started.md  graphics.md  janus-euler-roadmap-github-ready.md  language-guide.md  project-euler-troubleshooting.md  tooling.md
editors/vscode/: .vscodeignore  LICENSE  NOTICE  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: janus.tmLanguage.json
examples/: algebraic_enums.janus  array.janus  c_interop.janus  canonical_output.janus  casts.janus  constructor.janus  control_flow.janus  destructor.janus  enums.janus  functions.janus  generic_classes.janus  generics.janus  global_variables.janus  graphics.janus  hash_collections.janus  iterator_adapters.janus  iterator_pipeline.janus  loop_jumps.janus  match.janus  math.janus  operators.janus  option_result.janus  output.janus  owning_aggregates.janus  panic.janus  point.janus  pointers.janus  range.janus  structs.janus  try_operator.janus  types.janus  unit.janus  usize.janus  value.janus  variables.janus
examples/snake/: README.md  main.janus  neon.fs
include/janus/ast/: ast.hpp
include/janus/backend/llvm/: ir_generator.hpp  object_emitter.hpp  (+1 more)
include/janus/constant/: evaluator.hpp
include/janus/diagnostics/: compile_error.hpp  high_growth_loop_linter.hpp
include/janus/driver/: dependency.hpp  formatter.hpp  manifest.hpp  native_linker.hpp  project.hpp  registry.hpp  semver.hpp
include/janus/frontend/: lexer.hpp  module_loader.hpp  parser.hpp  token.hpp
include/janus/lsp/: server.hpp
include/janus/ownership/: classifier.hpp
include/janus/semantic/: analyzer.hpp
include/janus/types/: type.hpp
runtime/: janus_graphics.c  janus_runtime.c
scripts/: install-raylib.sh  install.ps1  install.sh  observe-process.pl  report_janus_issues.py  rollout_janus_euler_github_plan.py  smoke-test-package.ps1  smoke-test-package.sh  validate-release.sh  verify-janus-euler-suite.sh
src/backend/llvm/: ir_generator.cpp  object_emitter.cpp  type_lowering.cpp
src/constant/: evaluator.cpp
src/diagnostics/: high_growth_loop_linter.cpp
src/driver/: dependency.cpp  formatter.cpp  manifest.cpp  native_linker.cpp  project.cpp  registry.cpp  semver.cpp
src/frontend/: lexer.cpp  module_loader.cpp  parser.cpp
src/lsp/: server.cpp
src/semantic/: analyzer.cpp
src/types/: type.cpp
stdlib/std/: array.janus  array_builder.janus  builder.janus  c.janus  graphics.janus  hash_probe.janus  hashing.janus  hashmap.janus  hashset.janus  iterator.janus  math.janus  option.janus  range.janus  result.janus
stdlib/std/graphics/: audio.janus  drawing.janus  input.janus  resources.janus  types.janus
tests/diagnostics/: run_high_growth_loop_cli.cmake
tests/driver/: formatter_test.cpp  install_raylib_script_test.sh  install_script_test.sh  manifest_test.cpp  project_euler_fixture_structure_test.sh  run_cli_execution_contract.cmake  run_janusup.cmake  run_project_creation.cmake  semver_test.cpp  verify_janus_euler_suite_test.sh
tests/fixtures/modules/: collision_left.janus  collision_right.janus  global_config.janus  globals_entry.janus  globals_private_access.janus  globals_public_collision.janus  identity_ambiguous_entry.janus  identity_ambiguous_function_entry.janus  identity_entry.janus  other_config.janus  qualified_entry.janus  visibility_entry.janus  visibility_internal_field_entry.janus  visibility_internal_method_entry.janus  visibility_private_function_entry.janus  visibility_private_type_entry.janus
tests/fixtures/parser/: top_level_val.janus  top_level_var.janus
tests/fixtures/project-euler/: README.md  janus.toml  production.txt  smoke.txt
tests/fixtures/runtime/: aggregate_control_flow_cleanup.janus  byte_divide_by_zero.janus  byte_min_divide_overflow.janus  byte_min_remainder_overflow.janus  byte_remainder_by_zero.janus  canonical_output.expected.txt  global_aggregate_cleanup.janus  global_panic_cleanup.janus  global_variables.expected.txt  int_divide_by_zero.janus  int_min_divide_overflow.janus  int_min_remainder_overflow.janus  int_remainder_by_zero.janus  integer_boundary.expected.txt  integer_boundary.janus  lcm_overflow.janus  lcm_overflow_reversed.janus  math_helpers.expected.txt  math_helpers.janus  prime_factors.expected.txt  prime_factors.janus  usize_divide_by_zero.janus  usize_remainder_by_zero.janus
tests/frontend/: parser_top_level_declaration_test.cpp  run_top_level_declaration_cli.cmake
tests/interop/: c_abi.janus  c_abi_fixture.c  run_c_interop.cmake
tests/language/: class_test.cpp  constructor_initialization_test.cpp  control_flow_test.cpp  destructor_body_test.cpp  dynamic_array_test.cpp  enum_test.cpp  explicit_cast_test.cpp  extern_function_test.cpp  first_class_function_test.cpp  generic_class_test.cpp  generic_function_test.cpp  generic_method_test.cpp  global_variable_test.cpp  graphics_module_test.cpp  if_expression_test.cpp  integer_boundary_test.cpp  match_expression_test.cpp  method_chaining_test.cpp  module_import_test.cpp  move_semantics_test.cpp  mutable_variable_test.cpp  panic_test.cpp  pointer_memory_test.cpp  primitive_operations_test.cpp  standard_output_test.cpp  struct_value_test.cpp  trait_declaration_test.cpp  try_operator_test.cpp  unit_type_test.cpp  usize_test.cpp  val_declaration_test.cpp
tests/lsp/: server_test.cpp
tests/runtime/: compare_janus_output.cmake  fake_raylib.c  graphics_backend_test.c  graphics_runtime_test.c  run_janus_example.cmake  run_janus_panic_cleanup.cmake  run_janus_trap.cmake  verify_stdout_normalization.cmake  verify_stdout_normalization_rejects_lone_cr.cmake
tests/types/: builtin_types_test.cpp  int_type_test.cpp
tools/janus/: main.cpp
tools/janus-lsp/: main.cpp
tools/janusc/: main.cpp
tools/janusup/: main.cpp
(+44 files in other folders)
